# Begone

./: Makefile  README.md  begone.version  pyproject.toml  requirements.txt
begone/: convert.py
begone_convert/: __init__.py  convert.py
data/: kavkom.yaml  numbers.yaml
